fix issue where margin-top would offset modal wrap

--- a/source/scss/theater.scss
+++ b/source/scss/theater.scss
@@ -24,6 +24,8 @@ $btn-prefix: null !default;
 	position: fixed;
 	width: 100%;
 	height: 100%;
+	top: 0;
+	left: 0;
 	background-color: $wrap-bg-color;
   color: white;
   z-index: 100;
